freest/test/prog/Invalid/Linearity/LinRecFunction/LinRecFunction.fst
module LinRecFunction where

f : Int 1-> Int
f x = f x

main : Int
main = f 0
